HelloUltraviolet/Fixtures/RejectedSource/Statements/VarAnnotationMismatch/Expected.uv
//! Expected diagnostic metadata for the VarAnnotationMismatch rejected-source specimen.

expectedDiagnostic("E-MOD-2402", "req.18.VarStmtTypingMirrorsLet")
